# raylib-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yaml
include/: Version.hpp
resources/: README.md
src/: main.cpp
